--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 
 <div id="grid" class="grid"></div>
 
+<div id="overlay">
+    <div id="message"></div>
+    <button onclick="location.reload()">Chơi lại</button>
+</div>
+
 <script src="game.js"></script>
 </body>
 </html>
